-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 4.6.0
-
OSX, Qt Creator 4.6, CMake 3.10
For some reason the locator finds .o files in my CMake project. It's a fairly complex project but doesn't do anything particularly crazy.
I think in general it would be nice to be able to filter out certain file extensions, or possibly to obey .gitignore in the locator.
See also QTCREATORBUG-17382