Locator: Do not consider generated files in the project-related searches

It is unlikely that a user will want to look at generated files --
and if she wants to, there is always file search.

Task-number: QTCREATORBUG-20176
Change-Id: Iefb0aece1dbd6b39aa8892388411c10162319102
Reviewed-by: Eike Ziller <eike.ziller@qt.io>