src/plugins/projectexplorer/currentprojectfilter.cpp
@@ -58,7 +58,7 @@ void CurrentProjectFilter::prepareSearch(const QString &entry)
     if (!fileIterator()) {
         Utils::FilePathList paths;
         if (m_project)
-            paths = m_project->files(Project::AllFiles);
+            paths = m_project->files(Project::SourceFiles);
         setFileIterator(new BaseFileFilter::ListIterator(paths));
     }
     BaseFileFilter::prepareSearch(entry);
